se cambia la interfaz de cultivos y se le agrega un jdialog, tambien se cambian ciertos detalles en las clases relacionadas a cultivos